--- a/nest-start/package.json
+++ b/nest-start/package.json
@@ -30,7 +30,8 @@
     "express-session": "^1.17.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
